<resources>
    <string name="app_name">Orchestra eShop</string>
    <string name="app_logo">Logo of App</string>
    <string name="app_motto">Buy Your Needs</string>
    <string name="welcome_login">Already Have an Account? Log In</string>
    <string name="welcome_register">Join Orchestra Now!</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_userName">Username</string>
    <string name="register_email">Email</string>
    <string name="register_passWord">PassWord</string>
    <string name="register_confirmPass">Re-type Password</string>
    <string name="register_phoneNumber">Phone Number</string>
    <string name="register_buttonTxt">Create Account</string>
    <string name="register_buttonTxtLog">Have an Account Already? Log In</string>
    <string name="login_remember">Remember Me</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_button">Log In</string>
    <string name="login_admin">Admin Panel</string>
    <string name="login_user">User Log In</string>
    <string name="category_new">Add New Product</string>
    <string name="category_shirt">T Shirts</string>
    <string name="category_dress">Dress</string>
    <string name="category_bag">Bag</string>
    <string name="category_shoes">Shoes</string>
    <string name="category_watch">Watch</string>
    <string name="category_logout">Log out</string>
    <string name="category_sunGlass">Watch</string>
    <string name="new_product_image">Product Image</string>
    <string name="new_product_nameHint">Product Name</string>
    <string name="new_product_descriptionHint">Product Description</string>
    <string name="new_product_priceHint">Price</string>
    <string name="new_product_addProduct">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">User Profile Pic</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_logout">Log out</string>

    <string name="fragment_home_product">Product Name</string>
    <string name="fragment_home_productImage">Product Image</string>
    <string name="fragment_home_product_desc">Product Description</string>
    <string name="fragment_home_product_price">Product Price</string>




</resources>