<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminCategoryActivity">

    <TextView
        android:id="@+id/category_addNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/category_new"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:id="@+id/category_linearL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_addNew"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="45dp">

        <ImageView
            android:contentDescription="@string/category_shirt"
            android:id="@+id/category_t_shirt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/t_shirts">
        </ImageView>

        <ImageView
            android:contentDescription="@string/category_dress"
            android:id="@+id/category_dress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dress">
        </ImageView>

        <ImageView
            android:contentDescription="@string/category_bag"
            android:id="@+id/category_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bag">
        </ImageView>

        <ImageView
            android:contentDescription="@string/category_shoes"
            android:id="@+id/category_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shoes">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/category_linearL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_linearL"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="45dp">

        <ImageView
            android:contentDescription="@string/category_watch"
            android:id="@+id/category_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/watch">
        </ImageView>



    </LinearLayout>

</RelativeLayout>