<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_product"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/product_name"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/new_product_image"
            android:scaleType="centerCrop">

        </ImageView>

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image"
            android:layout_marginTop="2dp"
            android:text="@string/fragment_home_product_price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price"
            android:layout_marginTop="2dp"
            android:text="@string/fragment_home_product_desc"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black">
        </TextView>

<!--        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_menU"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>-->

    </RelativeLayout>

</androidx.cardview.widget.CardView>